# dicelore

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
adventures/: README.md
apps/orchestrator/: .env.example  package.json  vitest.config.ts
apps/web/: index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
backend/: README.md  package.json  vitest.config.ts
backend/src/: index.ts  sessionBackend.ts
docs/reports/: 2026-06-24-orc-hunt-doctrine.md  2026-06-25-玩家分型调研.md  README.md  dep-graph.data.json  dep-graph.dot  dep-graph.html
docs/research/: scrape.py
docs/todo/: 2026-06-21-eval-50turn-teambooks.md  2026-06-21-orchestrator-live-engine.md  2026-06-21-player-client-next-todo.md  2026-06-22-叙事记忆层.md  decisions-pending.md  nodes.jsonl
docs/wiki/: README.md
docs/重构/: ADR-storage-port.md  目标目录结构.md
frontend/: README.md  index.html  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: catalog.spec.ts
harness/: README.md  package.json  vitest.config.ts
harness/eval-dicegm/: play-mcp.test.ts  play-mcp.ts  run-live.ts
harness/eval-loregm/: build-mcp.test.ts  build-mcp.ts
harness/src/: index.ts
reports/: 2026-06-25-玩家分型调研.raw.json
research/: .cookie  .headers
research/scraped/: 从刚成年开始的兽人冒险！_38582339.md  总之，来抽卡吧_67916530.md  恶龙团_54995176.md
scripts/: gen-dep-graph.ts
src/anko_core/: __init__.py
src/anko_db/: __init__.py  rulebook.py  session.py
src/anko_dice/: __init__.py  server.py
src/dice/: dice.test.ts  index.ts
src/expr/: evaluate.test.ts  parse.ts  (+2 more)
(+478 files in other folders)
